Fix left panel clipping

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@
   width: 100%;
   min-height: 580px;
   font-family: 'DM Sans', sans-serif;
-  overflow: hidden;
+}
 }
 
 .tf-hero__left {
